--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-requirejs": "^0.2.2",
+    "lodash": ">=4.17.13",
     "protractor": "~1.0.0",
     "requirejs": "^2.1.14",
     "rjs-build-analysis": "0.0.3",
@@ -56,6 +57,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "morgan": "~1.3.0",
+    "lodash": ">=4.17.13",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
     "http-proxy": "~1.11.1"
