--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-requirejs": "^0.2.2",
-    "lodash": ">=4.17.13",
     "protractor": "~1.0.0",
     "requirejs": "^2.1.14",
     "rjs-build-analysis": "0.0.3",
@@ -52,14 +51,26 @@
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "dependencies": {
+    "adm-zip": ">=0.4.11",
+    "base64-url": ">=2.0.0",
     "cookie-parser": "~1.3.3",
+    "cryptiles": ">=4.1.2",
     "debug": "~2.0.0",
-    "ejs": "~0.8.5",
+    "ecstatic": ">=2.2.2",
+    "ejs": ">=2.5.5",
     "express": "~4.9.0",
+    "fresh": ">=0.5.2",
+    "js-yaml": ">=3.13.1",
     "morgan": "~1.3.0",
+    "mime": ">=1.4.1",
+    "minimatch": ">=3.0.2",
+    "ms": ">=0.7.1",
+    "negotiator": ">=0.6.1",
     "lodash": ">=4.17.13",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
-    "http-proxy": "~1.11.1"
+    "http-proxy": "~1.11.1",
+    "uglify-js": ">=2.6.0",
+    "ws": ">=3.3.1"
   }
 }
