--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   "dependencies": {
     "adm-zip": ">=0.4.11",
     "base64-url": ">=2.0.0",
+    "braces": ">=2.3.1",
+    "clean-css": ">=4.1.11",
     "cookie-parser": "~1.3.3",
     "cryptiles": ">=4.1.2",
     "debug": "~2.0.0",
@@ -60,16 +62,19 @@
     "ejs": ">=2.5.5",
     "express": "~4.9.0",
     "fresh": ">=0.5.2",
+    "@hapi/hoek": ">=8.2.1",
     "js-yaml": ">=3.13.1",
-    "morgan": "~1.3.0",
+    "morgan": ">=1.9.1",
     "mime": ">=1.4.1",
     "minimatch": ">=3.0.2",
     "ms": ">=0.7.1",
     "negotiator": ">=0.6.1",
     "lodash": ">=4.17.13",
     "request": "^2.47.0",
+    "send": ">=0.11.1",
     "serve-favicon": "~2.1.3",
     "http-proxy": "~1.11.1",
+    "underscore.string": ">=3.3.5",
     "uglify-js": ">=2.6.0",
     "ws": ">=3.3.1"
   }
