--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "base64-url": ">=2.0.0",
     "braces": ">=2.3.1",
     "clean-css": ">=4.1.11",
+    "cli": ">=1.0.0",
     "cookie-parser": "~1.3.3",
     "cryptiles": ">=4.1.2",
-    "debug": "~2.0.0",
+    "debug": "~2.6.9",
     "ecstatic": ">=2.2.2",
     "ejs": ">=2.5.5",
     "express": "~4.9.0",
