--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "dependencies": {
+    "@hapi/hoek": ">=8.2.1",
     "adm-zip": ">=0.4.11",
     "base64-url": ">=2.0.0",
     "braces": ">=2.3.1",
@@ -63,20 +64,21 @@
     "ejs": ">=2.5.5",
     "express": "~4.9.0",
     "fresh": ">=0.5.2",
-    "@hapi/hoek": ">=8.2.1",
+    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
+    "http-proxy": "~1.11.1",
     "js-yaml": ">=3.13.1",
-    "morgan": ">=1.9.1",
+    "lodash": ">=4.17.13",
     "mime": ">=1.4.1",
     "minimatch": ">=3.0.2",
+    "morgan": ">=1.9.1",
     "ms": ">=0.7.1",
     "negotiator": ">=0.6.1",
-    "lodash": ">=4.17.13",
+    "ng-annotate": "^1.2.2",
     "request": "^2.47.0",
     "send": ">=0.11.1",
     "serve-favicon": "~2.1.3",
-    "http-proxy": "~1.11.1",
+    "uglify-js-es6": "^2.8.9",
     "underscore.string": ">=3.3.5",
-    "uglify-js": ">=2.6.0",
     "ws": ">=3.3.1"
   }
 }
