--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "banana",
   "description": "Banana for Solr - A Port of Kibana",
   "repository": "https://github.com/LucidWorks/banana",
-  "license": "Apache License",
+  "license": "Apache-2.0",
   "author": {
     "name": "Andrew Thanalertvisuti",
     "company": "Lucidworks, Inc."
@@ -77,7 +77,7 @@
     "request": "^2.47.0",
     "send": ">=0.11.1",
     "serve-favicon": "~2.1.3",
-    "uglify-js-es6": "^2.8.9",
+    "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "underscore.string": ">=3.3.5",
     "ws": ">=3.3.1"
   }
