--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.11.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-htmlmin": "^3.1.0",
+    "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-git-describe": "~2.3.2",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-string-replace": "^1.0.0",
-    "http-server": "^0.6.1",
-    "karma": "^0.12.16",
+    "http-server": "^0.11.1",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
     "karma-requirejs": "^0.2.2",
-    "protractor": "~1.0.0",
+    "protractor": "^6.0.0",
     "requirejs": "^2.1.14",
     "rjs-build-analysis": "0.0.3",
     "shelljs": "^0.2.6",
@@ -62,7 +62,7 @@
     "debug": "~4.1.1",
     "ecstatic": ">=2.2.2",
     "ejs": ">=2.5.5",
-    "express": "~4.9.0",
+    "express": "^4.17.1",
     "fresh": ">=0.5.2",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "http-proxy": "~1.11.1",
@@ -76,7 +76,7 @@
     "ng-annotate": "^1.2.2",
     "request": "^2.47.0",
     "send": ">=0.11.1",
-    "serve-favicon": "~2.1.3",
+    "serve-favicon": "^2.5.0",
     "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "underscore.string": ">=3.3.5",
     "ws": ">=3.3.1"
