--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma-requirejs": "^0.2.2",
     "protractor": "^6.0.0",
     "requirejs": "^2.1.14",
+    "rjs-build-analysis": "0.0.3",
     "shelljs": "^0.2.6",
     "tmp": "0.0.23"
   },
@@ -50,34 +51,12 @@
     "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   },
   "dependencies": {
-    "@hapi/hoek": ">=8.2.1",
-    "adm-zip": ">=0.4.11",
-    "base64-url": ">=2.0.0",
-    "braces": ">=2.3.1",
-    "clean-css": ">=4.1.11",
-    "cli": ">=1.0.0",
     "cookie-parser": "~1.3.3",
-    "cryptiles": ">=4.1.2",
-    "debug": "~4.1.1",
-    "ecstatic": ">=2.2.2",
-    "ejs": ">=2.5.5",
     "express": "^4.17.1",
-    "fresh": ">=0.5.2",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "http-proxy": "~1.11.1",
-    "js-yaml": ">=3.13.1",
-    "lodash": ">=4.17.13",
-    "mime": ">=1.4.1",
-    "minimatch": ">=3.0.2",
     "morgan": ">=1.9.1",
-    "ms": ">=0.7.1",
-    "negotiator": ">=0.6.1",
-    "ng-annotate": "^1.2.2",
-    "request": "^2.47.0",
-    "send": ">=0.11.1",
     "serve-favicon": "^2.5.0",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony",
-    "underscore.string": ">=3.3.5",
-    "ws": ">=3.3.1"
+    "uglify-js": "github:mishoo/UglifyJS2#harmony"
   }
 }
