--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.3.3",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "http-proxy": "~1.11.1",
