--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postinstall": "",
     "prestart": "",
     "start": "node ./bin/banana",
-    "pretest": "npm install",
+    "pretest": "",
     "test": "node node_modules/karma/bin/karma start test/karma.conf.js",
     "test-single-run": "node node_modules/karma/bin/karma start test/karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
