Updating CI configurations

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 sudo: required
 dist: bionic
+services:
+  - xvfb
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 language: node_js
 node_js:
   - "12.14.0"
@@ -15,7 +13,6 @@ before_install:
     - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
     # starting a GUI to run tests, per https://docs.travis-ci.com/user/gui-and-headless-browsers/#Using-xvfb-to-Run-Tests-That-Require-a-GUI
     - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
     - "npm config set spin false"
     - "npm install -g npm@^3"
 install:
