--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-ng-annotate": "^0.9.2",
     "grunt-string-replace": "^1.0.0",
     "http-server": "^0.11.1",
+    "jshint": "^2.11.0",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^0.1.3",
