--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-uglify": "^0.7.0",
     "grunt-git-describe": "~2.3.2",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-string-replace": "^1.0.0",
+    "grunt-terser": "^1.0.0",
     "http-server": "^0.11.1",
     "jshint": "^2.11.0",
     "karma": "^4.4.1",
@@ -58,7 +58,6 @@
     "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "http-proxy": "~1.18.0",
     "morgan": ">=1.9.1",
-    "serve-favicon": "^2.5.0",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony"
+    "serve-favicon": "^2.5.0"
   }
 }
