--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ script:
 
 deploy:
   provider: s3
-  access-key-id: $ACESS_KEY_ID
-  secret-access-key: $SECRET_ACCESS_KEY
+  access_key_id: $ACESS_KEY_ID
+  secret_access_key: $SECRET_ACCESS_KEY
   bucket: "io.aadel.banana"
   skip_cleanup: true
   upload-dir: $TRAVIS_BRANCH
