--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ script:
 
 deploy:
   provider: s3
-  access_key_id: $ACESS_KEY_ID
-  secret_access_key: $SECRET_ACCESS_KEY
   bucket: "io.aadel.banana"
   skip_cleanup: true
   upload-dir: $TRAVIS_BRANCH
+  acl: public_read
+  file_glob: true
   glob: banana-dist.tar.gz
   on:
-    branch: latest
+    branch: $TRAVIS_BRANCH
