Adding dist deployment keys

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ script:
 
 deploy:
   provider: s3
+  access_key_id: $AWS_ACCESS_KEY_ID
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
   bucket: "io.aadel.banana"
   skip_cleanup: true
   upload-dir: $TRAVIS_BRANCH
