--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "bower": "^1.3.1",
     "grunt": "^1.0.4",
     "grunt-angular-templates": "~0.3.12",
-    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compress": "^1.6.0",
-    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
     "grunt-contrib-htmlmin": "^3.1.0",
     "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-less": "^1.0.0",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-git-describe": "~2.3.2",
-    "grunt-ng-annotate": "^0.9.2",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-git-describe": "^2.4.4",
+    "grunt-ng-annotate": "^4.0.0",
     "grunt-string-replace": "^1.0.0",
     "grunt-terser": "^1.0.0",
     "http-server": "^0.12.1",
