Shipping local rjs-build-analysis module

--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     "karma-jasmine": "^3.1.0",
     "karma-junit-reporter": "^0.2.2",
     "karma-requirejs": "^1.1.0",
-    "protractor": "^6.0.0",
     "requirejs": "^2.1.14",
-    "rjs-build-analysis": "0.0.3",
+    "rjs-build-analysis": "file:src/vendor/rjs-build-analysis",
     "shelljs": "^0.2.6",
     "tmp": "0.0.23"
   },
