--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
     - npm install
     - npm install -g grunt
     - grunt build
-    - mkdir $TRAVIS_BRANCH && cd dist && tar -cvzf ../$TRAVIS_BRANCH/banana-$TRAVIS_BRANCH.tar.gz * && cd ..
+    - mkdir $TRAVIS_BRANCH && tar -cvzf $TRAVIS_BRANCH/banana-$TRAVIS_BRANCH.tar.gz dist
 script:
     - npm run test-single-run
 
