--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "cookie-parser": "~1.3.3",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "express-csp-header": "^3.0.0",
+    "helmet-csp": "^2.10.0",
     "http-proxy": "~1.18.1",
     "morgan": ">=1.9.1",
     "serve-favicon": "^2.5.0"
